# social--gaming

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  RockPaperScissorsGame.json  exampleConfig.json  exampleSpecs.json  webchat.html
game/: Game.cpp  GameSession.cpp
game/include/: Game.h  GameSession.h
gameSession/: GameSession.cpp
gameSession/include/: GameSession.h
games/: Game.cpp  Game.h  GameSession.cpp  configuration.cpp  configuration.h
games/Beauty/: beauty.cpp
games/Beauty/include/: beauty.h
games/Brawn/: Brawn.cpp  Brawn.h
games/Fighting/: Fighting.cpp  Fighting.h
games/Fighting/include/: Fighting.h
games/Poll/: Poll.cpp
games/Poll/include/: Poll.h
games/Trivia/: Trivia.cpp
games/Trivia/include/: Trivia.h
games/include/: Game.h  GameSession.h
lib/: CMakeLists.txt
lib/domainNameTranslator/: CMakeLists.txt  DomainNameTranslator.cpp
lib/domainNameTranslator/include/: DomainNameTranslator.h
lib/game/: ActiveGame.cpp  CMakeLists.txt  Configurations.cpp  Constants.cpp  Game.cpp  GameRules.cpp  GameState.cpp  Messages.cpp  PerAudience.cpp  PerPlayer.cpp  Rule.cpp  UserVariables.cpp  Variables.cpp  constants.cpp  game.cpp  gameRulesTester.cpp  messages.cpp  nodes.cpp  testInterpreter  testInterpreter.cpp
lib/game/include/: ActiveGame.h  Configurations.h  Constants.h  Element.h  Game.h  GameRules.h  GameState.h  Messages.h  PerAudience.h  PerPlayer.h  Player.h  Rule.h  UserVariables.h  Variables.h  constants.h  element.h  game.h  gameState.h  messages.h  nodes.h  player.h  variables.h
lib/gameConverter/: CMakeLists.txt  GameConverter.cpp  gameConverter.cpp  gameConverterTester.cpp
lib/gameConverter/include/: GameConverter.h  gameConverter.h
lib/gamesession/: CMakeLists.txt
lib/gamesession/include/: GameSession.h  GameSessionInterface.h
lib/gamesession/src/: GameSession.cpp
lib/gamespecification/: GameConfiguration.cpp  GameConfiguration.h  main.cpp
lib/interpreter/: CMakeLists.txt  dsl.cpp  example.json  interpreter.cpp  testInterpreter  testInterpreter.cpp
lib/interpreter/include/: dsl.h  interpreter.h
lib/jsonParser/: CMakeLists.txt  jsonParser.cpp
lib/jsonParser/include/: dsl.h  jsonParser.h
lib/jsonReader/: CMakeLists.txt  GameRules.cpp  JsonReader.cpp  Rule.cpp  dsl.cpp  gameRules.cpp  gameRulesTester.cpp  jsonReader.cpp  rule.cpp
lib/jsonReader/include/: GameRules.h  JsonReader.h  Rule.h  dsl.h  gameRules.h  jsonReader.h  rule.h
lib/networking/include/: Client.h  Server.h
lib/sessionmanager/: CMakeLists.txt
lib/sessionmanager/include/: SessionManager.h  sessionManager.h
lib/sessionmanager/src/: SessionManager.cpp  sessionManager.cpp
lib/users/: CMakeLists.txt  User.cpp
lib/users/include/: User.h
server/: server.cpp
server/include/: server.h
tests/: CMakeLists.txt  ConfigurationTests.cpp  InterpreterTests.cpp  convertGameRulesTests.cpp  dslTests.cpp  interpreterTests.cpp
tests/DomainNameInterpreterTests/: CMakeLists.txt  DomainNameTests.cpp
tests/convertGameRulesTests/: CMakeLists.txt  convertGameRulesTests.cpp
tests/gameConverterTests/: CMakeLists.txt  convertGameRulesTests.cpp
tests/lib/googletest/: CMakeLists.txt
tests/variableTest/: CMakeLists.txt  variableTest.cpp
tools/: CMakeLists.txt
tools/clientManager/: CMAKELISTS.txt  ClientManager.cpp
tools/clientManager/include/: ClientManager.h
tools/clientServer/: CMakeLists.txt  ClientServer.cpp  ClientWindow.h  MainMenuWindow.cpp  MainMenuWindow.h
tools/gameServer/: CMakeLists.txt  main.cpp
users/: Users.cpp
users/include/: Users.h
